fixed background for height on smaller sizes, but the width is still an issue

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -15,6 +15,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+     min-height: 100dvh;
+     width: 100vw;
 }
 
 
